# Dev_Container

./: CMakeLists.txt  Dockerfile  README.md  run.sh
.devcontainer/: Dockerfile  devcontainer.json
dev_container/.devcontainer/: Dockerfile  devcontainer.json
docker_build_script/: Dockerfile  Dockerfile_fedora  Dockerfile_ubuntu  build.sh  init.sh  run.sh
docker_build_script/fedora/: Dockerfile  Dockerfile_fedora  build.sh  into.sh  run.sh
docker_build_script/ubuntu/: Dockerfile  Dockerfile_ubuntu  build.sh  init.sh  into.sh  run.sh
project/: CMakeLists.txt
project/src/: main.cpp
src/: main.cpp
